[gd_scene load_steps=8 format=3 uid="uid://c3aenpou72yhe"]

[ext_resource type="Script" uid="uid://bt1dr4rflt87l" path="res://script/enemyRange.gd" id="1_3fe45"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y02vh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7jmf6"]
albedo_color = Color(0.214697, 9.2411e-06, 0.896626, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uygfb"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tl74f"]
margin = 0.0
radius = 5.49907

[sub_resource type="BoxMesh" id="BoxMesh_s7jbw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cjiks"]

[node name="CharacterBody3D" type="CharacterBody3D" groups=["Enemi"]]
script = ExtResource("1_3fe45")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_y02vh")
surface_material_override/0 = SubResource("StandardMaterial3D_7jmf6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.07634, 0, 0, 0, 1.08497, 0, 1, -0.0224109)
shape = SubResource("CapsuleShape3D_uygfb")

[node name="SightRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightRange"]
transform = Transform3D(0.922569, 0, 0, 0, 0.604057, 0, 0, 0, 0.849231, 0.330059, 0.829318, -0.126741)
shape = SubResource("SphereShape3D_tl74f")

[node name="ShootTimer" type="Timer" parent="."]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.362373, -4.59099e-06, 0.000883034, 8.09599e-06, 0.234274, -0.00311644, -0.000319964, 0.000730051, 0.999993, -0.706724, 0.725266, -0.0163174)
mesh = SubResource("BoxMesh_s7jbw")

[node name="RayCast3D" type="RayCast3D" parent="MeshInstance3D2"]
transform = Transform3D(0.999864, 0.165986, -0.00913128, 0.0120216, -2.76524, 0.973497, 0.0112598, -11.7871, -0.22851, 0.163231, -2.71936, -11.5915)

[node name="RayCast3D2" type="RayCast3D" parent="MeshInstance3D2"]
transform = Transform3D(0.881831, -5.70875, -0.00913126, -0.0999069, -2.49086, 0.973497, -0.460861, -10.3834, -0.22851, -5.53008, -3.06238, -10.2969)

[node name="RayCast3D3" type="RayCast3D" parent="MeshInstance3D2"]
transform = Transform3D(0.877724, 5.80078, -0.00913126, 0.117286, -2.37718, 0.973497, 0.464588, -10.359, -0.22851, 5.69956, -2.22283, -9.93285)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.00199, 0)

[node name="enemyHitArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="enemyHitArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_cjiks")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="body_entered" from="SightRange" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_sight_range_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
